--- a/.eslintrc
+++ b/.eslintrc
@@ -33,7 +33,7 @@
     "react/no-array-index-key": 0,
     "prefer-promise-reject-errors": 0,
     "jsx-a11y/label-has-for": 0,
-    "prettier/prettier": "error"
+    "prettier/prettier": ["error", { "singleQuote": true }]
   },
   "plugins": ["react", "prettier"]
 }
