--- a/package.json
+++ b/package.json
@@ -33,9 +33,10 @@
   },
   "homepage": "https://github.com/coolbeatz71/todo-app-react#readme",
   "dependencies": {
+    "axios": "^0.18.0",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "prop-types": "^15.7.2"
+    "react-dom": "^16.8.6"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
