--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A simple TODO app just for learning reactJS",
   "main": "index.js",
   "scripts": {
+    "test": "jest --coverage --forceExit --detectOpenHandles",
     "lint": "npx eslint ./src/**/*.js",
     "lint-fix": "npx eslint --fix ./src/**/*.js",
     "build": "webpack --mode production",
@@ -50,6 +51,8 @@
     "babel-eslint": "^10.0.1",
     "babel-loader": "^8.0.6",
     "css-loader": "^2.1.1",
+    "enzyme": "^3.9.0",
+    "enzyme-adapter-react-16": "^1.13.2",
     "eslint": "^5.16.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.3.0",
@@ -60,6 +63,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^2.3.0",
+    "jest": "^24.8.0",
+    "jest-enzyme": "^7.0.2",
     "lint-staged": "^8.1.7",
     "node-sass": "^4.12.0",
     "prettier": "^1.17.1",
