--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "scripts": {
     "test": "jest --coverage --forceExit --detectOpenHandles",
-    "coveralls": "NODE_ENV=test ./node_modules/.bin/jest index.test.js --detectOpenHandles --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
+    "coveralls": "jest --detectOpenHandles --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "npx eslint ./src/**/*.js",
     "lint-fix": "npx eslint --fix ./src/**/*.js",
     "build": "webpack --mode production",
