--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -2,7 +2,7 @@ version: 2
 jobs:
   build:
     environment:
-      CC_TEST_REPORTER_ID: $CC_TEST_REPORTER_ID
+      CC_TEST_REPORTER_ID: 4d96cb4dfb6ebee450d4be4421f8b4c7acdc126a
     docker:
       - image: circleci/node:10.15.2
     steps:
