--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,5 +23,5 @@ jobs:
           name: coveralls
           command: |
             ./cc-test-reporter before-build
-            npm test -- -u
+            npm test -- -u --coverage
             ./cc-test-reporter after-build --exit-code $?
