--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
     "coveralls": "jest --detectOpenHandles --coverage && cat ./coverage/lcov.info | ./node_modules/coveralls/bin/coveralls.js",
     "lint": "npx eslint ./src/**/*.js",
     "lint-fix": "npx eslint --fix ./src/**/*.js",
+    "lint-test": "npx eslint ./__tests__/**/*.js",
+    "lint-test-fix": "npx eslint --fix ./__tests__/**/*.js",
     "build": "webpack --mode production",
     "start": "webpack-dev-server --open --hot --inline --mode development"
   },
@@ -23,6 +25,11 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx}": [
+      "eslint",
+      "pretty-quick --staged",
+      "git add"
+    ],
+    "__tests__/**/*.{js,jsx}": [
       "eslint",
       "pretty-quick --staged",
       "git add"
@@ -53,11 +60,13 @@
     "react-redux": "^7.0.3",
     "redux": "^4.0.1",
     "redux-devtools-extension": "^2.13.8",
+    "redux-promise-middleware": "^6.1.0",
     "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
     "@babel/plugin-proposal-class-properties": "^7.4.4",
+    "@babel/plugin-transform-runtime": "^7.4.4",
     "@babel/preset-env": "^7.4.5",
     "@babel/preset-react": "^7.0.0",
     "babel-eslint": "^10.0.1",
@@ -77,6 +86,7 @@
     "node-sass": "^4.12.0",
     "prettier": "^1.17.1",
     "pretty-quick": "^1.11.0",
+    "redux-mock-store": "^1.5.3",
     "sass-loader": "^7.1.0",
     "style-loader": "^0.23.1",
     "webpack": "^4.32.2",
